Translating to English

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 @Author  : residuallaugh 
 -->
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">    
 </head>
@@ -14,17 +14,17 @@
             <p id="ip" style="word-break:break-word;">🈚️</p>
             <h1>ip_port</h1>
             <p id="ip_port" style="word-break:break-word;">🈚️</p>
-            <h1>域名</h1>
+            <h1>Domain names</h1>
             <p id="domain" style="word-break:break-word;">🈚️</p>
-            <h1>身份证</h1>
+            <h1>ID</h1>
             <p id="sfz" style="">🈚️</p>
-            <h1>手机号</h1>
+            <h1>Phone Numbers</h1>
             <p id="mobile" style="">🈚️</p>
-            <h1>邮箱</h1>
+            <h1>Emails</h1>
             <p id="mail" style="">🈚️</p>
             <h1>jwt</h1>
             <p id="jwt" style="word-break:break-word;">🈚️</p>
-            <h1>算法</h1>
+            <h1>Algorithm</h1>
             <p id="algorithm" style="">🈚️</p>
         </div>
         <div style="width: 600px; height: 800px; float: left;">
